fix: game, study 패키지 버그 수정 - study 문제 설정시 db에 저장 되지 않던 버그 수정 - game 설정 update 기능이 동작하지 않는 버그 수정